--- a/文件变化监控Test/文件变化监控Test.csproj
+++ b/文件变化监控Test/文件变化监控Test.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Physical" Version="3.1.6" />
+  </ItemGroup>
 </Project>
