--- a/LoggingTest/appsettings.json
+++ b/LoggingTest/appsettings.json
@@ -3,7 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.Hosting.Lifetime": "Information",
+      "LoggingTest": "Information" //this is for our own namespace.
     }
-  }
+  },
+  "MyKey": "my key from json"
 }
