bind configure options.

--- a/LoggingTest/appsettings.json
+++ b/LoggingTest/appsettings.json
@@ -7,5 +7,9 @@
       "LoggingTest": "Information" //this is for our own namespace.
     }
   },
-  "MyKey": "my key from json"
+  "MyKey": "my key from json",
+  "TransientFaultHandlingOptions": {
+    "Enabled": true,
+    "AutoRetryDelay": "00:00:07"
+  }
 }
