--- a/.gitignore
+++ b/.gitignore
@@ -262,3 +262,4 @@ __pycache__/
 /ElasticSearch/Models/Generated/Database.cs
 /ElasticSearch/App.config
 /restfulApi/appsettings.json
+LoggingTest/appsettings.json
